# Ramanujans-Dreams

./: .gitignore  .instructions.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_POLICY.md  DEFINITION_OF_DONE.md  GLOBAL_TEST_REPORT.md  README.md  SYSTEM_SPEC.md  generate_system_overview_notebook.py  main_example.py  pyproject.toml  requirements.txt  system_overview.ipynb
.claude/: settings.local.json.bak.20260602_215542
.github/: copilot-instructions.md
context/: ATTRIBUTES_MANAGEMENT.md  COVERAGE_POLICY.md  DEFINITION_OF_DONE.md  SEARCH_ALGORITHMS.md  roadmap.md
data_utils/: data_extractor.py  generate_system_overview_notebook.py  search_data.py
dreamer/: __init__.py
examples/: analysis.py  benchmark_3f2_samplers.py  benchmark_extraction.py  benchmark_ga_parallel_eval.py  benchmark_search_parallelism.py  calagari_michael.py  demo_central_arrangement.py  main_example.py  search.py  search_data.py  verify_unbounded_checkers.py
graphs/: shard delta sphere.py  shard_delta_sphere_jsonl.py
ramanujans_dreams.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
setup/: dev_setup.sh  developer_setup.py
temp/: main_example.py
templates/: code_review_checklist.md  scientific_report.tex
tests/: TEST_AUDIT_REPORT.md  check_inner_shell_truth.py  conftest.py  db_v1_test.py  discrete_testing_tool.py  plot_3f2_benchmark.py  simulated_annealing_testing.py  simulated_annealing_visual_test.py  test_annealing_search.py  test_attributes_management.py  test_config_recompute_and_norms.py  test_db_and_config.py  test_extraction_initial_points.py  test_extraction_v2.py  (+22 more)
(+155 files in other folders)
