[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dreamer*"]

[project]
name = "ramanujans-dreams"
version = "0.0.1"
description = "System for modular automated search in CMFs for irrationality of constants"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

authors = [
  { name = "Ramanujan Machine Group", email = "ramanujan.machine@gmail.com" }
]

dependencies = [
    "peewee",
    "sympy",
    "ramanujantools @ git+https://github.com/RamanujanMachine/ramanujantools.git",
    "matplotlib",
    "numpy",
    "mpmath",
    "networkx",
    "tqdm",
    "numba",
    "pandas",
    "scipy",
    "pulp",
    "LIReC @ git+https://github.com/RamanujanMachine/LIReC.git@main",
    "cysignals",
    "fpylll"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]

[project.urls]
Homepage = "https://www.ramanujanmachine.com/"
Repository = "https://github.com/RamanujanMachine/Ramanujans-Dreams"
